--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -144,7 +144,7 @@
 
 <!-- why-techno Section --> 
     <section class="why-techno">
-        <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color:rgb(8, 55, 116); font-family: 'Arial', sans-serif; letter-spacing: 2px;">
+        <h2>
             <u>Why TechnoWin IT Infra Stands Out</u>
         </h2>
         
@@ -248,7 +248,7 @@
     
     <!-- Services Section -->
 <section class="serviceview">
-    <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color:  rgb(8, 55, 116); font-family: 'Arial', sans-serif; letter-spacing: 2px;"><u>Services We Provide</u></h2>
+    <h2><u>Services We Provide</u></h2>
   
     <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
       <!-- Service Boxes -->
@@ -343,7 +343,7 @@
   
 <!-- project video section -->
     <section id="project-videos">
-        <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: rgb(8, 55, 116); font-family: 'Arial', sans-serif; letter-spacing: 2px;">
+        <h2>
             <u>Innovations by Us</u>
         </h2>
         <div class="card-container">
@@ -474,7 +474,7 @@
 
     <section class="achievements-section">
         <div class="achievements-text">
-            <h2 class="achievements-title"><u>Our Achievements</u></h2>
+            <h2 class="achievements-title"><u>Achievements</u></h2>
             <p class="achievements-description">
                 TechnoWin IT Infra Pvt. Ltd. is a leader in providing innovative IT infrastructure solutions. We take pride in our industry-leading certifications and dedication to quality, security, and performance. Our team consistently strives for excellence to meet the growing demands of the global technology landscape.
             </p>
@@ -506,10 +506,9 @@
     
 
 <section class="client-carousel-section">
-    <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: rgb(8, 55, 116);  font-family: 'Arial', sans-serif; letter-spacing: 2px;">
+    <h2>
         <u> Clients & Collaboration</u>
     </h2>
-
     <div class="client-slider">
         <!-- Client Logo 1 -->
         <div class="client-logo-item">
