--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -154,7 +154,7 @@
                     <img src="{% static 'images/innovation.png' %}" alt="Innovative Solutions">
                     <h3>Innovative Solutions</h3>
                     <p>Workflow System – Define Level, Role, Action, and Timeline for a service or Document – Workflow is generated<br>
-                        Form Generation System – Create fields and their validations and Map to create a Form<br>
+                        Form Generation System – Create fields and their validations and Map to create a Form , File comparison using AI / ML<br>
                         Audit Utility…
                          </p><br>
                          <a href="#" class="read-more">
@@ -167,10 +167,10 @@
                 <div class="card-content">
                     <img src="{% static 'images/care.png' %}" alt="Expert Team">
                     <h3> Skilled IT Manpower</h3>
-                    <p>Multi-stack developers building projects/ products across many disciplines, apps, architectures and languages.<br>
+                    <p>Multi-stack developers building projects/ products / AI enabled features across many disciplines, apps, architectures and languages.<br>
                         Project Coordinators at Large Client Sites<br>
                         Business/ System Analyst/ Tester…’
-                        </p><br><br>
+                        </p><br><br><br>
                         <a href="AboutUs#testimonials" class="read-more">
                             <span>Read More</span>
                             <i class="fas fa-arrow-right"></i>
@@ -184,7 +184,7 @@
                     <p>Audit Utility – Customized for CGST Commissionerate, Labour Law Consultant<br>
                         Payroll System – for Municipal Corporation, Daily Salary payment for Supply Chain Company<br>
                         Customized Software for Labour Law Consultants…
-                        </p>
+                        </p><br>
                     <a href="#" class="read-more">
                         <span>Read More</span>
                         <i class="fas fa-arrow-right"></i>
@@ -254,7 +254,7 @@
       <!-- Service Boxes -->
       <div class="service-box">
         <img src="{% static 'images/service1.png' %}" alt="Service 1">
-        <h3>Web Development</h3>
+        <h3>Web Development with AI enabled Features</h3>
         <p>Technowin develops websites, web applications, E-Commerce Sites, Content Management Systems, Databases, Server and Network Security Systems etc. as per Customer Requirement.</p>
         <a href="{% url 'Software' %}#web-development" class="read-more">
           <span>Read More</span>
@@ -264,7 +264,7 @@
       <div class="service-box">
         <img src="{% static 'images/service4.png' %}" alt="Service 2">
         <h3>App Development</h3>
-        <p>Apps for Mobile Devices like Cell Phones, Tablets etc. for both Android and IOS devices are developed by Technowin.  </p>
+        <p>Apps for Mobile Devices like Cell Phones, Tablets etc. for both Android and IOS devices are developed by Technowin.  </p><br><br>
         <br><br>
         <a href="{% url 'Software' %}#app-development" class="read-more">
           <span>Read More</span>
@@ -274,7 +274,7 @@
       <div class="service-box">
         <img src="{% static 'images/service3.png' %}" alt="Service 3">
         <h3>Program Management</h3>
-        <p>Technowin provides Umbrella services for many of the Customers; Providing Hardware, Networking Services, Manpower, Cloud Services, Software and Maintenance, Project Management and Implementation.</p>
+        <p>Technowin provides Umbrella services for many of the Customers; Providing Hardware, Networking Services, Manpower, Cloud Services, Software and Maintenance, Project Management and Implementation.</p><br><br>
         <a href="Services" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -291,7 +291,7 @@
       </div>
       <div class="service-box">
         <img src="{% static 'images/service6.png' %}" alt="Service 5">
-        <h3>Cloud Computing</h3>
+        <h3>Cloud Hosting</h3>
         <p>Technowin provides hosting services to its customer for hosting both self-developed software as well as Third Party ones.</p><br><br>
         <a href="Services" class="read-more">
           <span>Read More</span>
