--- a/static/css/about_us_style.css
+++ b/static/css/about_us_style.css
@@ -864,7 +864,7 @@ html {
     font-size:100%;
   }
 
-  .books-border footer{
+  .books-border h5{
     font-size:180%;
     text-align:center;
   }
