--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -82,7 +82,7 @@
         </ul>
     </nav>
 
-    <section class="video-section">
+    <section class="slider-video-section">
         <video class="auto-video" autoplay muted loop>
           <source src="{% static 'slider/slider_video.mp4' %}" type="video/mp4">
           Your browser does not support the video tag.
