--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -152,11 +152,13 @@
             <div class="card">
                 <div class="card-content">
                     <img src="{% static 'images/innovation.png' %}" alt="Innovative Solutions">
-                    <h3>Innovative Solutions</h3>
-                    <p>Workflow System – Define Level, Role, Action, and Timeline for a service or Document – Workflow is generated<br>
-                        Form Generation System – Create fields and their validations and Map to create a Form , File comparison using AI / ML<br>
-                        Audit Utility…
-                         </p><br>
+                    <h3><i>Innovative Solutions</i></h3>
+                    <h5><u>Workflow System </u>- </h5>
+                    <p>Define Level, Role, Action, and Timeline for a service or Document – Workflow is generated</p>
+                    <h5><u>Form Generation System</u> – </h5>
+                    <p>Create fields and their validations and Map to create a Form , File comparison using AI / ML</p>
+                    <h5><u>Audit Utility </u>…</h5>
+                         </p><br><br><br>
                          <a href="#" class="read-more">
                             <span>Read More</span>
                             <i class="fas fa-arrow-right"></i>
@@ -166,11 +168,13 @@
             <div class="card">
                 <div class="card-content">
                     <img src="{% static 'images/care.png' %}" alt="Expert Team">
-                    <h3> Skilled IT Manpower</h3>
-                    <p>Multi-stack developers building projects/ products / AI enabled features across many disciplines, apps, architectures and languages.<br>
-                        Project Coordinators at Large Client Sites<br>
-                        Business/ System Analyst/ Tester…’
-                        </p><br><br><br>
+                    <h3> <i>Skilled IT Manpower</i></h3>
+                    <h5><u>Multi-stack developers</u></h5>
+                    <p>Building projects/ products / AI enabled features across many disciplines, apps, architectures and languages.<p>
+                       <h5><u>Project Coordinators</u></h5>
+                       <p>At Large Client Sites</p>
+                        <h5><u>Business/ System Analyst/ Tester</u>…’</h5>
+                        </p><br><br><br><br>
                         <a href="AboutUs#testimonials" class="read-more">
                             <span>Read More</span>
                             <i class="fas fa-arrow-right"></i>
@@ -180,11 +184,13 @@
             <div class="card">
                 <div class="card-content">
                     <img src="{% static 'images/leader.png' %}" alt="Customer-Centric Approach">
-                    <h3>Customer-Centric Approach</h3>
-                    <p>Audit Utility – Customized for CGST Commissionerate, Labour Law Consultant<br>
-                        Payroll System – for Municipal Corporation, Daily Salary payment for Supply Chain Company<br>
+                    <h3><i>Customer-Centric Approach</i></h3>
+                    <h5><u>Audit Utility</u>–</h5>
+                    <p>Customized for CGST Commissionerate,Labour Law Consultant</p>
+                    <h5><u>Payroll System</u>–</h5> 
+                    <p>For Municipal Corporation, Daily Salary payment for Supply Chain Company
                         Customized Software for Labour Law Consultants…
-                        </p><br>
+                        </p><br><br><br>
                     <a href="#" class="read-more">
                         <span>Read More</span>
                         <i class="fas fa-arrow-right"></i>
